# sorteadorFutebol

./: .gitignore  README.md  TODO.md
.claude/: napkin.md
.github/workflows/: ci.yml
.ui-system/: system.md
backend/: .env.sample  main.py  models.py  pyproject.toml  requirements.txt  sorteio.py  storage.py
backend/tests/: conftest.py  test_routes.py  test_sorteio.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmDialog.tsx  RouletteAnimation.tsx
frontend/src/lib/: api.ts  types.ts  useRealtimeUpdate.ts  utils-times.ts
frontend/src/pages/: AdminLoginPage.tsx  AdminPage.tsx  LoginPage.tsx  PlayerPage.tsx  TimesPage.tsx
